syntax="proto3";
package experimentalproto;
option go_package="./experimentalproto";

import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";

service ExperimentalMultiVectorRpc {
    rpc Ping(google.protobuf.Empty) returns (google.protobuf.Empty) {}
    rpc CreateCollection(Collection) returns (CollectionResponse) {}
    rpc DeleteCollection(CollectionName) returns (DeleteCollectionResponse) {}
    rpc GetCollection(CollectionName) returns (CollectionDetail) {}

    rpc LoadCollection(CollectionName) returns (CollectionDetail) {}
    rpc ReleaseCollection(CollectionName) returns (Response) {}
    rpc Flush(CollectionName) returns (Response) {}

    rpc Index(IndexChange) returns (Response) {}
    rpc VectorSearch(SearchMultiIndex) returns (SearchResponse) {}
    // rpc HybridSearch(SearchHybridMultiIndex) returns (SearchResponse) {}

}

message CollectionName {
    string collection_name=1;
    bool with_size=2;
}

message Collection {
    string collection_name=1;
    repeated Index index=2;
    Distance distance=3;
    Quantization quantization=4;
    uint32 dim=5;
    bool versioning=6;
}

message CollectionResponse {
    Collection collection=1;
    bool status=2;
    Error error=3;
}

message Index {
    string index_name=1;
    IndexType index_type=2;
    bool primary_key=3;
    bool enable_null=4;
    // bool fulltext=5;
    // bool filterable=6;
}

enum IndexType {
    String = 0;
    Integer = 1;
    Float = 2;
    Boolean = 3;
    Vector=4;
}

message Response {
    bool status=1;
    Error error=2;
}


message Error {
    string error_message=1;
    ErrorCode error_code=2;
}


enum Distance {
    Cosine=0;
    Euclidean=1;
}

enum Quantization {
    None=0;
    F16=1;
    F8=2;
    BF16=3;
}

message DeleteCollectionResponse {
    bool status=1;
    Error error=2;
}

enum ErrorCode {
    UNDEFINED=0; // check error message
    RPC_ERROR=1;
    COMMUNICATION_SHARD_RPC_ERROR=2;
    COMMUNICATION_SHARD_ERROR=3;
    MARSHAL_ERROR=4;
    INTERNAL_FUNC_ERROR=5;
}

message CollectionDetail {
    Collection collection=1;
    uint32 collection_size=2;
    uint64 collection_memory=3;
    bool status=4;
    Error error=5;
}

message IndexChange {
    string id=1;
    string collection_name=2;
    google.protobuf.Struct metadata=3;
    IndexChagedType changed=4;
}

enum IndexChagedType {
    INSERT = 0;
    UPDATE = 1;
    DELETE = 2;
}

message SearchMultiIndex {
    string collection_name=1;
    repeated MultiVectorIndex vector=2;
    uint64 topK=3;
    bool high_resource_avaliable=4;
}

// message SearchHybridMultiIndex {
//     string collection_name=1;
//     repeated MultiVectorIndex vector=2;
//     uint64 topK=3;
//     map<string,string> filter=4;
//     string fulltext_search_query=5;
//     bool with_latency=6;
//     bool high_resource_avaliable=7;
// }


message MultiVectorIndex {
    string index_name = 1;
    repeated float vector=2;
}


message SearchResponse {
    bool status = 1;
    Error error=2;
    repeated Candidates candidates=3;
}

message Candidates {
    string id = 1;
    google.protobuf.Struct metadata = 2;
    float score=3;
}